--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/index.js",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "args": ["npm","start"]
         },
         {
             "type": "node",
