--- a/package.json
+++ b/package.json
@@ -25,19 +25,30 @@
   "author": "aquafreax",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
+    "http-errors": "^2.0.0",
+    "http-status": "^1.5.3",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
+    "validator": "^13.7.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/http-errors": "^1.8.2",
     "@types/jest": "^29.1.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.8.2",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.7",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
