--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "aquafreax",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -34,20 +35,36 @@
     "http-status": "^1.5.3",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.2",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.6.5",
+    "nodemailer": "^6.8.0",
+    "nunjucks": "^3.2.3",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "request": "^2.88.2",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/http-errors": "^1.8.2",
     "@types/jest": "^29.1.2",
+    "@types/js-yaml": "^4.0.5",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^18.8.2",
+    "@types/nodemailer": "^6.4.6",
+    "@types/nunjucks": "^3.2.1",
+    "@types/passport": "^1.0.11",
+    "@types/request": "^2.48.8",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.7",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
