--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.0",
     "http-errors": "^2.0.0",
     "http-status": "^1.5.3",
@@ -38,12 +39,16 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.5",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
+    "passport-jwt": "^4.0.0",
     "request": "^2.88.2",
+    "request-ip": "^3.3.0",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
     "winston": "^3.8.2"
@@ -53,16 +58,21 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/http-errors": "^1.8.2",
     "@types/jest": "^29.1.2",
     "@types/js-yaml": "^4.0.5",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.2",
     "@types/nodemailer": "^6.4.6",
     "@types/nunjucks": "^3.2.1",
     "@types/passport": "^1.0.11",
+    "@types/passport-facebook": "^2.1.11",
+    "@types/passport-jwt": "^3.0.7",
     "@types/request": "^2.48.8",
+    "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.7",
