--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
+    "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
+    "razorpay": "^2.8.3",
     "request": "^2.88.2",
     "request-ip": "^3.3.0",
     "uuid": "^9.0.0",
