--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,14 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "Debug Typescript",
+            "program": "${workspaceFolder}/src/server.ts",
+            "preLaunchTask": "tsc: build - tsconfig.json",
+            "outFiles": ["${workspaceFolder}/buildd/*.js"]
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Actual Stub test global/tenant",
             "program": "${workspaceFolder}/node_modules/jest/build/index.js",
             "args": [
